--- a/DockerSampleApplication/DockerSampleApplication/docker-compose.yml
+++ b/DockerSampleApplication/DockerSampleApplication/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: dockersampleapplication
     environment:
       - ASPNETCORE_URLS=http://0.0.0.0:80
-      - ConnectionString=Server=sql.data;User=sa;Password=pass@word1;Database=WebAPI_SQL_Docker_Demo;    
+      - ConnectionString=Server=sql.data;User=sa;Password=pass@word1;Database=UsersDB;    
     build:
       context: .
       dockerfile: Dockerfile
     ports: 
-      - "8081:80"
+       "8081:80"
     volumes: 
       - ./DockerSampleApplication/bin/pub/:/app
     container_name: dockersampleapplication
@@ -22,4 +22,4 @@ services:
       SA_PASSWORD: "pass@word1"
       ACCEPT_EULA: "Y"
     ports:
-      - "1433:1433"
+       "1433:1433"
